test/classes/errors/nilability-init-var/init-var-oknil-shared-from-oknil-owned.chpl
//  lhs: shared?  rhs: owned?  ok

class MyClass {
  var x: int;
}

var rhs: owned MyClass?;

var lhs: shared MyClass? = rhs;


